# realtime-processing

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
rtp/: apps.py  asgi.py  consumers.py  models.py  routing.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
rtp/migrations/: 0001_initial.py
rtp/templates/rtp/: image_list.html
